--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+      <script src="https://kit.fontawesome.com/6fa6f7174b.js" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="style.css">
     <title>Legal Solutions</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="logo"><img src="images/logo.png" alt="logo"></div>
+            <div class="menu">
+                <ul>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
