--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="logo"><img src="images/logo.png" alt="logo"></div>
+        <nav class="navbar flex m-auto">
+            <div class="logo"><img src="images/logo2.png" alt="logo"></div>
             <div class="menu">
-                <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                <ul class="flex">
+                    <li><a href=""></a>Home </li>
+                    <li><a href=""></a>Services <i class="fas fa-chevron-right"></i></li>
+                    <li><a href=""></a>Cases <i class="fas fa-chevron-right"></i></li>
+                    <li><a href=""></a>Blog <i class="fas fa-chevron-right"></i></li>
+                    <li><a href=""></a>Contact us <i class="fas fa-chevron-right"></i></li>
                 </ul>
             </div>
+            <div class="button"><button><a href="/">Free Consultation</a></button></div>
         </nav>
     </header>
 </body>
